// Original file: exa/chat_pb/chat.proto

export const ChatFeedbackType = {
  FEEDBACK_TYPE_UNSPECIFIED: 'FEEDBACK_TYPE_UNSPECIFIED',
  FEEDBACK_TYPE_ACCEPT: 'FEEDBACK_TYPE_ACCEPT',
  FEEDBACK_TYPE_REJECT: 'FEEDBACK_TYPE_REJECT',
  FEEDBACK_TYPE_COPIED: 'FEEDBACK_TYPE_COPIED',
  FEEDBACK_TYPE_ACCEPT_DIFF: 'FEEDBACK_TYPE_ACCEPT_DIFF',
  FEEDBACK_TYPE_REJECT_DIFF: 'FEEDBACK_TYPE_REJECT_DIFF',
  FEEDBACK_TYPE_APPLY_DIFF: 'FEEDBACK_TYPE_APPLY_DIFF',
  FEEDBACK_TYPE_INSERT_AT_CURSOR: 'FEEDBACK_TYPE_INSERT_AT_CURSOR',
} as const;

export type ChatFeedbackType =
  | 'FEEDBACK_TYPE_UNSPECIFIED'
  | 0
  | 'FEEDBACK_TYPE_ACCEPT'
  | 1
  | 'FEEDBACK_TYPE_REJECT'
  | 2
  | 'FEEDBACK_TYPE_COPIED'
  | 3
  | 'FEEDBACK_TYPE_ACCEPT_DIFF'
  | 4
  | 'FEEDBACK_TYPE_REJECT_DIFF'
  | 5
  | 'FEEDBACK_TYPE_APPLY_DIFF'
  | 6
  | 'FEEDBACK_TYPE_INSERT_AT_CURSOR'
  | 7

export type ChatFeedbackType__Output = typeof ChatFeedbackType[keyof typeof ChatFeedbackType]
