// Original file: exa/chat_pb/chat.proto

export const ChatIntentType = {
  CHAT_INTENT_UNSPECIFIED: 'CHAT_INTENT_UNSPECIFIED',
  CHAT_INTENT_GENERIC: 'CHAT_INTENT_GENERIC',
  CHAT_INTENT_FUNCTION_EXPLAIN: 'CHAT_INTENT_FUNCTION_EXPLAIN',
  CHAT_INTENT_FUNCTION_DOCSTRING: 'CHAT_INTENT_FUNCTION_DOCSTRING',
  CHAT_INTENT_FUNCTION_REFACTOR: 'CHAT_INTENT_FUNCTION_REFACTOR',
  CHAT_INTENT_CODE_BLOCK_EXPLAIN: 'CHAT_INTENT_CODE_BLOCK_EXPLAIN',
  CHAT_INTENT_CODE_BLOCK_REFACTOR: 'CHAT_INTENT_CODE_BLOCK_REFACTOR',
  CHAT_INTENT_FUNCTION_UNIT_TESTS: 'CHAT_INTENT_FUNCTION_UNIT_TESTS',
  CHAT_INTENT_PROBLEM_EXPLAIN: 'CHAT_INTENT_PROBLEM_EXPLAIN',
  CHAT_INTENT_GENERATE_CODE: 'CHAT_INTENT_GENERATE_CODE',
  CHAT_INTENT_CLASS_EXPLAIN: 'CHAT_INTENT_CLASS_EXPLAIN',
  CHAT_INTENT_SEARCH: 'CHAT_INTENT_SEARCH',
  CHAT_INTENT_FAST_APPLY: 'CHAT_INTENT_FAST_APPLY',
} as const;

export type ChatIntentType =
  | 'CHAT_INTENT_UNSPECIFIED'
  | 0
  | 'CHAT_INTENT_GENERIC'
  | 1
  | 'CHAT_INTENT_FUNCTION_EXPLAIN'
  | 2
  | 'CHAT_INTENT_FUNCTION_DOCSTRING'
  | 3
  | 'CHAT_INTENT_FUNCTION_REFACTOR'
  | 4
  | 'CHAT_INTENT_CODE_BLOCK_EXPLAIN'
  | 5
  | 'CHAT_INTENT_CODE_BLOCK_REFACTOR'
  | 6
  | 'CHAT_INTENT_FUNCTION_UNIT_TESTS'
  | 7
  | 'CHAT_INTENT_PROBLEM_EXPLAIN'
  | 8
  | 'CHAT_INTENT_GENERATE_CODE'
  | 9
  | 'CHAT_INTENT_CLASS_EXPLAIN'
  | 10
  | 'CHAT_INTENT_SEARCH'
  | 11
  | 'CHAT_INTENT_FAST_APPLY'
  | 12

export type ChatIntentType__Output = typeof ChatIntentType[keyof typeof ChatIntentType]
