// Original file: exa/chat_pb/chat.proto


export interface ChatMessageStatusContextRelevancy {
  'isLoading'?: (boolean);
  'isRelevant'?: (boolean);
  'querySuggestions'?: (string)[];
}

export interface ChatMessageStatusContextRelevancy__Output {
  'isLoading': (boolean);
  'isRelevant': (boolean);
  'querySuggestions': (string)[];
}
