// Original file: exa/chat_pb/chat.proto


export interface ChatToolChoice {
  'optionName'?: (string);
  'toolName'?: (string);
  'choice'?: "optionName"|"toolName";
}

export interface ChatToolChoice__Output {
  'optionName'?: (string);
  'toolName'?: (string);
  'choice'?: "optionName"|"toolName";
}
