// Original file: exa/chat_pb/chat.proto


export interface CodeBlockInfo {
  'rawSource'?: (string);
  'startLine'?: (number);
  'startCol'?: (number);
  'endLine'?: (number);
  'endCol'?: (number);
}

export interface CodeBlockInfo__Output {
  'rawSource': (string);
  'startLine': (number);
  'startCol': (number);
  'endLine': (number);
  'endCol': (number);
}
