// Original file: exa/chat_pb/chat.proto


export interface ComputerUseToolConfig {
  'displayWidthPx'?: (number);
  'displayHeightPx'?: (number);
  'displayNumber'?: (number);
}

export interface ComputerUseToolConfig__Output {
  'displayWidthPx': (number);
  'displayHeightPx': (number);
  'displayNumber': (number);
}
