// Original file: exa/chat_pb/chat.proto

export const DeepWikiSymbolType = {
  DEEP_WIKI_SYMBOL_TYPE_UNSPECIFIED: 'DEEP_WIKI_SYMBOL_TYPE_UNSPECIFIED',
  DEEP_WIKI_SYMBOL_TYPE_FILE: 'DEEP_WIKI_SYMBOL_TYPE_FILE',
  DEEP_WIKI_SYMBOL_TYPE_MODULE: 'DEEP_WIKI_SYMBOL_TYPE_MODULE',
  DEEP_WIKI_SYMBOL_TYPE_NAMESPACE: 'DEEP_WIKI_SYMBOL_TYPE_NAMESPACE',
  DEEP_WIKI_SYMBOL_TYPE_PACKAGE: 'DEEP_WIKI_SYMBOL_TYPE_PACKAGE',
  DEEP_WIKI_SYMBOL_TYPE_CLASS: 'DEEP_WIKI_SYMBOL_TYPE_CLASS',
  DEEP_WIKI_SYMBOL_TYPE_METHOD: 'DEEP_WIKI_SYMBOL_TYPE_METHOD',
  DEEP_WIKI_SYMBOL_TYPE_PROPERTY: 'DEEP_WIKI_SYMBOL_TYPE_PROPERTY',
  DEEP_WIKI_SYMBOL_TYPE_FIELD: 'DEEP_WIKI_SYMBOL_TYPE_FIELD',
  DEEP_WIKI_SYMBOL_TYPE_CONSTRUCTOR: 'DEEP_WIKI_SYMBOL_TYPE_CONSTRUCTOR',
  DEEP_WIKI_SYMBOL_TYPE_ENUM: 'DEEP_WIKI_SYMBOL_TYPE_ENUM',
  DEEP_WIKI_SYMBOL_TYPE_INTERFACE: 'DEEP_WIKI_SYMBOL_TYPE_INTERFACE',
  DEEP_WIKI_SYMBOL_TYPE_FUNCTION: 'DEEP_WIKI_SYMBOL_TYPE_FUNCTION',
  DEEP_WIKI_SYMBOL_TYPE_VARIABLE: 'DEEP_WIKI_SYMBOL_TYPE_VARIABLE',
  DEEP_WIKI_SYMBOL_TYPE_CONSTANT: 'DEEP_WIKI_SYMBOL_TYPE_CONSTANT',
  DEEP_WIKI_SYMBOL_TYPE_STRING: 'DEEP_WIKI_SYMBOL_TYPE_STRING',
  DEEP_WIKI_SYMBOL_TYPE_NUMBER: 'DEEP_WIKI_SYMBOL_TYPE_NUMBER',
  DEEP_WIKI_SYMBOL_TYPE_BOOLEAN: 'DEEP_WIKI_SYMBOL_TYPE_BOOLEAN',
  DEEP_WIKI_SYMBOL_TYPE_ARRAY: 'DEEP_WIKI_SYMBOL_TYPE_ARRAY',
  DEEP_WIKI_SYMBOL_TYPE_OBJECT: 'DEEP_WIKI_SYMBOL_TYPE_OBJECT',
  DEEP_WIKI_SYMBOL_TYPE_KEY: 'DEEP_WIKI_SYMBOL_TYPE_KEY',
  DEEP_WIKI_SYMBOL_TYPE_NULL: 'DEEP_WIKI_SYMBOL_TYPE_NULL',
  DEEP_WIKI_SYMBOL_TYPE_ENUM_MEMBER: 'DEEP_WIKI_SYMBOL_TYPE_ENUM_MEMBER',
  DEEP_WIKI_SYMBOL_TYPE_STRUCT: 'DEEP_WIKI_SYMBOL_TYPE_STRUCT',
  DEEP_WIKI_SYMBOL_TYPE_EVENT: 'DEEP_WIKI_SYMBOL_TYPE_EVENT',
  DEEP_WIKI_SYMBOL_TYPE_OPERATOR: 'DEEP_WIKI_SYMBOL_TYPE_OPERATOR',
  DEEP_WIKI_SYMBOL_TYPE_TYPE_PARAMETER: 'DEEP_WIKI_SYMBOL_TYPE_TYPE_PARAMETER',
} as const;

export type DeepWikiSymbolType =
  | 'DEEP_WIKI_SYMBOL_TYPE_UNSPECIFIED'
  | 0
  | 'DEEP_WIKI_SYMBOL_TYPE_FILE'
  | 1
  | 'DEEP_WIKI_SYMBOL_TYPE_MODULE'
  | 2
  | 'DEEP_WIKI_SYMBOL_TYPE_NAMESPACE'
  | 3
  | 'DEEP_WIKI_SYMBOL_TYPE_PACKAGE'
  | 4
  | 'DEEP_WIKI_SYMBOL_TYPE_CLASS'
  | 5
  | 'DEEP_WIKI_SYMBOL_TYPE_METHOD'
  | 6
  | 'DEEP_WIKI_SYMBOL_TYPE_PROPERTY'
  | 7
  | 'DEEP_WIKI_SYMBOL_TYPE_FIELD'
  | 8
  | 'DEEP_WIKI_SYMBOL_TYPE_CONSTRUCTOR'
  | 9
  | 'DEEP_WIKI_SYMBOL_TYPE_ENUM'
  | 10
  | 'DEEP_WIKI_SYMBOL_TYPE_INTERFACE'
  | 11
  | 'DEEP_WIKI_SYMBOL_TYPE_FUNCTION'
  | 12
  | 'DEEP_WIKI_SYMBOL_TYPE_VARIABLE'
  | 13
  | 'DEEP_WIKI_SYMBOL_TYPE_CONSTANT'
  | 14
  | 'DEEP_WIKI_SYMBOL_TYPE_STRING'
  | 15
  | 'DEEP_WIKI_SYMBOL_TYPE_NUMBER'
  | 16
  | 'DEEP_WIKI_SYMBOL_TYPE_BOOLEAN'
  | 17
  | 'DEEP_WIKI_SYMBOL_TYPE_ARRAY'
  | 18
  | 'DEEP_WIKI_SYMBOL_TYPE_OBJECT'
  | 19
  | 'DEEP_WIKI_SYMBOL_TYPE_KEY'
  | 20
  | 'DEEP_WIKI_SYMBOL_TYPE_NULL'
  | 21
  | 'DEEP_WIKI_SYMBOL_TYPE_ENUM_MEMBER'
  | 22
  | 'DEEP_WIKI_SYMBOL_TYPE_STRUCT'
  | 23
  | 'DEEP_WIKI_SYMBOL_TYPE_EVENT'
  | 24
  | 'DEEP_WIKI_SYMBOL_TYPE_OPERATOR'
  | 25
  | 'DEEP_WIKI_SYMBOL_TYPE_TYPE_PARAMETER'
  | 26

export type DeepWikiSymbolType__Output = typeof DeepWikiSymbolType[keyof typeof DeepWikiSymbolType]
